wrap margin fix

--- a/src/styles/hp.styl
+++ b/src/styles/hp.styl
@@ -48,6 +48,8 @@
   a:hover
     text-decoration: underline
 .wrap .main
+  margin-top: 70px
+.hp-wrap .main
   margin-top: 40px
 .highlights
   margin: 0 0 20px 0
